Fix password validation weird jumps
<==== Mercurial data ====>
Branch: cloud_portal_default

--- a/cloud_portal/front_end/app/styles/_theme_override.scss
+++ b/cloud_portal/front_end/app/styles/_theme_override.scss
@@ -295,3 +295,7 @@ label {
     font-size: 13px;
   }
 }
+
+.help-block{
+  background-color: $body-bg;
+}
